# plynk-lin

./: .gitignore  README.md  pyproject.toml
benchmark/: results_plink.csv  results_prj.csv  visualization.ipynb
design_docs/: 00_arg_config_parsing.md  01_io.md  02_sample_variant_alignment.md  03_qc_filters.md  04_association_testing.md  05_output_writing.md  output_writing.md  sample_variant_alignment.md
plynk_lin/: __init__.py  __main__.py  alignment.py  arg_config.py  association.py  config.py  io.py  output_writer.py  qc_filters.py  reporting.py
scripts/: convert_benchmark_to_bfile.sh  make_perf_subsets.py  measure_command.py  run_benchmarks.sh  smoke_io.py  smoke_pipeline.py
tests/: test_alignment.py  test_arg_config.py  test_association.py  test_cli_parse_only.py  test_end_to_end.py  test_io_tables.py  test_io_vcf.py  test_output_writer.py  test_qc_filters.py
tests/data/: covar.txt  covar_complete.txt  covar_dup.txt  pheno.txt  pheno_complete.txt  pheno_dup.txt  pheno_headerless.txt  pipeline.vcf  test.vcf  test_bad_gt.vcf  test_bad_multiallelic.vcf  test_multiallelic_choose_dominant_alt.vcf  test_multiallelic_secondary_gt.vcf
