[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plynk-lin"
version = "0.1.0"
description = "Minimal PLINK-like linear GWAS pipeline"
requires-python = ">=3.10"
dependencies = ["cyvcf2>=0.31", "numpy>=2.0", "scipy>=1.13"]

[tool.setuptools]
packages = ["plynk_lin"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
